--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using AspCoreServer
+@using AspnetcoreAngularPwa
 @addTagHelper "*, Microsoft.AspNetCore.SpaServices"
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
